# rp-exp

./: .gitignore  README.md  experiment-scenarios.md  experiment1.md  experiment2.md  experiment3.md  workload_scenarios.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/test/lib/test/: s1_pub  s1_sub  s2_pub  s2_sub  s3_points_pub  s3_points_sub  s3a_pub  s3a_sub  s4_image_pub  s4_image_sub  s4a_pub  s4a_sub  s5a_pub  s5a_sub  s5b_pub  s5b_sub
install/test/share/ament_index/resource_index/parent_prefix_path/: test
install/test/share/test/: package.sh  package.xml
install/test/share/test/cmake/: testConfig.cmake
log/: latest_build
scripts/: analyze_exp1.py  analyze_exp3.py  pub_a.sh  pub_exp3_a.sh  run_b.sh  run_exp1.sh  run_exp1_a.sh  run_exp1_needed_sub.sh  run_exp1_pub.sh  run_exp1_sub.sh  run_exp3_b.sh  run_exp3_pub.sh  run_exp3_sub.sh  run_scenario_b.sh
test/: CMakeLists.txt
test/launch/: s5a.launch.py  s5a_pub.launch.py  s5a_sub.launch.py  s5b.launch.py  s5b_pub.launch.py  s5b_sub.launch.py
test/src/: s1_pub.cpp  s1_sub.cpp  s2_pub.cpp  s2_sub.cpp  s3_points_pub.cpp  s3_points_sub.cpp  s3a_pub.cpp  s3a_sub.cpp  s4_image_pub.cpp  s4_image_sub.cpp  s4a_pub.cpp  s4a_sub.cpp  s5a_pub.cpp  s5a_sub.cpp  s5b_pub.cpp  s5b_sub.cpp  stress_pub.cpp  stress_sub.cpp
